Added reads to blob